--- a/src/app/components/eventmgmt/eventmgmt.component.html
+++ b/src/app/components/eventmgmt/eventmgmt.component.html
@@ -1,3 +1,41 @@
-<p>
-  eventmgmt works!
-</p>
+<h4>Manage the Salon</h4>>
+<table class="table table-striped table-responsive-md btn-table">
+
+    <thead>
+      <tr>
+        <th>Participant Name</th>
+        <th>Payment Status</th>
+        <th>Shortlisted</th>
+        <th>Transaction Id</th>
+      </tr>
+    </thead>
+  
+    <tbody>
+      <tr>
+        <th scope="row">Dinesh Allamaprabhu</th>
+        <td>Done</td>
+        <td>Yes</td>
+        <td>
+          <input type="text" class="form-control" mdbInput>
+        </td>
+        
+      </tr>
+      <tr>
+        <th scope="row">Kishore Ravikumar</th>
+        <td>No</td>
+        <td>Yes</td>
+        <td>
+          <input type="text" class="form-control" mdbInput>
+        </td>
+      </tr>
+      <tr>
+        <th scope="row">Sathyanarayana C R</th>
+        <td>No</td>
+        <td>No</td>
+        <td>
+          <input type="text" class="form-control" mdbInput>
+        </td>
+      </tr>
+    </tbody>
+  
+  </table>
