--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -9,13 +9,13 @@
     <div class="collapse navbar-collapse" id="emNavbar">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" routerLink="">Home
-                <span class="sr-only">(current)</span>
-              </a>
+                <a class="nav-link" routerLink="">Home</a>
             </li>
-            
+            <li *ngIf="signedIn"><a class="nav-link" routerLink="">Profile</a></li>
+            <li *ngIf="signedIn"><a class="nav-link" routerLink="/invite">Invite</a></li>
+            <li *ngIf="signedIn"><a class="nav-link" routerLink="/club">Clubs</a></li>
         </ul>
-        <ul class="navbar-nav ml-auto">
+        <!-- <ul class="navbar-nav ml-auto">
             
             <li class="nav-item" *ngIf="false">
                 <a class="nav-link dropdown-toggle" id="navbarProfileDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -26,7 +26,7 @@
                     <a class="dropdown-item" href="#">Log out</a>
                 </div>
             </li>
-        </ul>
+        </ul> -->
     </div>
 </nav>
 <router-outlet></router-outlet>
