--- a/src/app/components/invite/invite.component.html
+++ b/src/app/components/invite/invite.component.html
@@ -1,3 +1,41 @@
-<p>
-  invite works!
-</p>
+<div class="card">
+
+  <h6 class="card-header info-color white-text text-center">
+    <strong>Invite members</strong>
+  </h6>
+
+  <!--Card content-->
+  <div class="card-body px-lg-5">
+    <form [formGroup]="inviteForm" (ngSubmit)="invite()" class="md-form needs-validation" style="color: #757575;">
+          <div class="row">
+            <div class="col-2">
+              <label for="name">Name</label>
+            </div>
+            <div class="col-8">
+              <input formControlName="name" type="text" id="name" class="form-control"
+                placeholder="" mdbInput mdbValidate>
+            </div>
+
+          </div>
+          <div class="row">
+            <div class="col-2">
+              <label for="email">Email</label>
+            </div>
+            <div class="col">
+
+              <input type="text" formControlName="email" id="email" class="form-control" placeholder="" mdbInput mdbValidate>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-2">
+              <label for="club">Club</label>
+            </div>
+            <div class="col">
+              <input type="text" formControlName="club" id="club" class="form-control" placeholder="" mdbInput mdbValidate>
+            </div>
+          </div>
+          <button class="btn btn-outline-info btn-rounded btn-block z-depth-0 my-4 waves-effect" 
+              type="submit" [disabled]="!inviteForm.valid">Invite</button>
+    </form>
+  </div>
+</div>
