--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -21,6 +21,11 @@
                   <label for="email" class="active">Email Address</label>
               </div>
               <div class="md-form">
+                    <i class="fa fa-user prefix"></i>
+                    <input mdbInput mdbValidate formControlName="inviteCode" type="text" class="form-control" id="code" placeholder="">
+                    <label for="code" class="active">Invite Code</label>
+                </div>
+              <div class="md-form">
                   <i class="fa fa-phone prefix"></i>
                   <input mdbInput mdbValidate formControlName="phone" type="text" class="form-control" id="phone" placeholder="">
                   <label for="phone" class="active">Phone</label>
