--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -11,9 +11,9 @@
             <li class="nav-item active">
                 <a class="nav-link" routerLink="">Home</a>
             </li>
-            <li *ngIf="signedIn"><a class="nav-link" routerLink="">Profile</a></li>
-            <li *ngIf="signedIn"><a class="nav-link" routerLink="/invite">Invite</a></li>
-            <li *ngIf="signedIn"><a class="nav-link" routerLink="/club">Clubs</a></li>
+            <li class="nav-item" *ngIf="signedIn"><a class="nav-link" routerLink="">Profile</a></li>
+            <li class="nav-item" *ngIf="signedIn"><a class="nav-link" routerLink="/invite">Invite</a></li>
+            <li class="nav-item" *ngIf="signedIn"><a class="nav-link" routerLink="/club">Clubs</a></li>
         </ul>
         <!-- <ul class="navbar-nav ml-auto">
             
