--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -12,7 +12,7 @@
               </div>
               <div class="md-form">
                   <i class="fa fa-user prefix"></i>
-                  <input mdbInput mdbValidate formControlName="name" type="text" class="form-control" id="name" placeholder="">
+                  <input mdbInput mdbValidate formControlName="fullName" type="text" class="form-control" id="name" placeholder="">
                   <label for="name" class="active">Full Name</label>
               </div>
               <div class="md-form">
