--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -21,7 +21,7 @@
             
             <li class="nav-item" *ngIf="signedIn">
                 <a class="nav-link dropdown-toggle" id="navbarProfileDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-user"></i> Profile
+                    <i class="fas fa-user"></i> {{userName}}
                 </a>
                 <div class="dropdown-menu dropdown-menu-right dropdown-info" aria-labelledby="navbarProfileDropdown">
                     <a class="dropdown-item" href="#">My account</a>
