--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -28,24 +28,66 @@
       <thead>
         <tr>
           <th>Salon Name</th>
-          <th>Location</th>
           <th>Closing Date</th>
-          <th>Manage</th>
+          <th>Status</th>
         </tr>
       </thead>
     
       <tbody>
         <tr *ngFor="let salon of searchResult; let i = index;">
-          <th scope="row">{{salon.name}}</th>
-          <td>{{salon.country}}</td>
+          <th scope="row" (click)="salonDetails(salon.salonId)">{{salon.name}} 
+            <i *ngIf="!isAdmin" class="fas fa-eye"></i> 
+            <i *ngIf="isAdmin" class="fas fa-pencil-alt"></i>
+          </th>
+         
           <td>{{salon.closingDate}}</td>
-          <td>
+          <td *ngIf="isAdmin">
             <button mdbBtn color="primary" outline="true" size="sm" mdbWavesEffect type="button" class="m-0" (click)="manageEvent(salon._id)">Manage</button>
+          </td>
+          <td *ngIf="!isAdmin && salon.state === 'RECDINV'">
+            <button mdbBtn color="primary" outline="true" size="sm" mdbWavesEffect type="button" class="m-0" (click)="update(salon, 'INTERESTED')">Show Interest</button>
+          </td>
+          <td *ngIf="!isAdmin && salon.state === 'INTERESTED'">
+              <i class="fas fa-check green-text"></i>
+              <button mdbBtn color="primary" outline="true" size="sm" mdbWavesEffect type="button" class="m-0" data-toggle="modal" data-target="#modalPayment" (click)="setCurrent(salon)">Update Payment</button>
+          </td>
+          <td *ngIf="!isAdmin && salon.state === 'PAID'">
+              <i class="far fa-money-bill-alt green-text"></i>
+
+          </td>
+          <td *ngIf="!isAdmin && salon.state === 'SHORTLISTED'">
+              <i class="far fa-thumbs-up green-text"></i>
+          </td>
+          <td *ngIf="!isAdmin && salon.state === 'REJECTED'">
+              <i class="far fa-thumbs-down red-text"></i>
           </td>
           
         </tr>
        
       </tbody>
+      <div class="modal fade" id="modalPayment" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+          aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header text-center">
+            <h4 class="modal-title w-100 font-weight-bold">Payment</h4>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body mx-3">
+            <div class="md-form mb-5">
+              <i class="fas fa-money-bill-alt prefix grey-text"></i>
+              <input id="defaultForm-email" [(ngModel)]="paymentId">
+              <label data-error="wrong" data-success="right" for="defaultForm-email">Payment Id</label>
+            </div>
+          </div>
+          <div class="modal-footer d-flex justify-content-center">
+            <button class="btn btn-default" (click)="updatePayment()">Update</button>
+          </div>
+        </div>
+      </div>
+    </div>
     
     </table>
 </div>
