--- a/src/app/components/eventmgmt/eventmgmt.component.html
+++ b/src/app/components/eventmgmt/eventmgmt.component.html
@@ -1,15 +1,21 @@
 <h4>Manage {{(salon && salon.name) ? salon.name : ''}} Salon</h4>
-<div class="d-flex flex-row">
+<div *ngIf="isAdmin" class="d-flex flex-row">
   <button class="btn btn-outline-info  btn-block z-depth-0 my-4 waves-effect"
   type="submit" (click)="publish()">Publish</button>
   <button class="btn btn-outline-info  ml-4 btn-block z-depth-0 my-4 waves-effect" (click)="showMembers()">Show Members</button>
+</div>
+<div class="alert alert-danger text-center py-1" role="alert" *ngIf="message && message.status === 'ERROR'">
+  {{message.msg}}
+</div>
+<div class="alert alert-success text-center py-1" role="alert" *ngIf="message && message.status === 'SUCCESS'">
+  {{message.msg}}
 </div>
 <table class="table table-striped table-responsive-md btn-table">
 
     <thead>
       <tr>
         <th>Participant Name</th>
-        <th>Payment Status</th>
+        <th>Status</th>
         <th>Shortlisted</th>
         <th>Transaction Id</th>
       </tr>
@@ -19,13 +25,37 @@
       <ng-container *ngFor="let member of members; let i = index">
         <tr>
           <td>
-            <mat-checkbox (change)="selectMember($event, i, member)" [color]="warn" [checked]="member.checked">{{member.fullName}}</mat-checkbox>
+            <mat-checkbox (change)="selectMember($event, i, member)" [color]="warn" [checked]="member.checked">{{member.name}}</mat-checkbox>
           </td>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td>{{member.status}}</td>
+          <td><button *ngIf="isAdmin && member.showShortlist" mdbBtn color="primary" outline="true" size="sm" mdbWavesEffect type="button" class="m-0" data-toggle="modal" data-target="#modalShortlist" (click)="setCurrent(member)">Update Shortlist</button></td>
+          <td>{{member.transactionId}}</td>
         </tr>
       </ng-container>
     </tbody>
   
   </table>
+  <div class="modal fade" id="modalShortlist" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+          aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header text-center">
+            <h4 class="modal-title w-100 font-weight-bold">Shortlist</h4>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body mx-3">
+            
+                <mat-radio-group aria-label="Select an option" [(ngModel)]="shortlist">
+                    <mat-radio-button value="1">Selected</mat-radio-button>
+                    <mat-radio-button value="0">Rejected</mat-radio-button>
+                </mat-radio-group>
+            
+          </div>
+          <div class="modal-footer d-flex justify-content-center">
+            <button class="btn btn-default" (click)="updateShortlist()">Update</button>
+          </div>
+        </div>
+      </div>
+    </div>
