--- a/src/app/components/createevent/createevent.component.html
+++ b/src/app/components/createevent/createevent.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-
+  <ngx-spinner></ngx-spinner>
   <h6 class="card-header info-color white-text text-center">
     <strong>Create Salon</strong>
   </h6>
